compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__constant_named_module_info.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 744
expression: "\npub const module_info = 1\n\npub fn main() {\n    module_info\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 4).
-spec main() -> integer().
main() ->
    1.
