compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test1.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 176
expression: "pub fn t() { True }"
---
----- SOURCE CODE
pub fn t() { True }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([t/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec t() -> boolean().
t() ->
    true.
