compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test10.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "record Null { Null } fn x() { Null }"
---
----- SOURCE CODE
record Null { Null } fn x() { Null }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([null/0]).

-type null() :: null.

-file("/root/project/test/my/mod.rakun", 1).
-spec x() -> null().
x() ->
    null.
