compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test11.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "record Point { Point(x: Int, y: Int) }\n                fn x() { Point(x: 4, y: 6) Point(y: 1, x: 9) }"
---
----- SOURCE CODE
record Point { Point(x: Int, y: Int) }
                fn x() { Point(x: 4, y: 6) Point(y: 1, x: 9) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 2).
-spec x() -> point().
x() ->
    {point, 4, 6},
    {point, 9, 1}.
