compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test12.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 282
expression: "record Point { Point(x: Int, y: Int) } fn x(y) { let Point(a, b) = y a }"
---
----- SOURCE CODE
record Point { Point(x: Int, y: Int) } fn x(y) { let Point(a, b) = y a }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 1).
-spec x(point()) -> integer().
x(Y) ->
    {point, A, B} = Y,
    A.
