compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test1_1.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 168
expression: "pub record Money { Pound(Int) }\n                    fn pound(x) { Pound(x) }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([money/0]).

-type money() :: {pound, integer()}.

-file("/root/project/test/my/mod.rakun", 2).
-spec pound(integer()) -> money().
pound(X) ->
    {pound, X}.
