compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test1_2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn loop() { loop() }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([loop/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec loop() -> any().
loop() ->
    loop().
