compiler-core/src/erlang/snapshots/rakun_core__erlang__tests__integration_test20.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 329
expression: "\npub fn go(a) {\n  let a = a + 1\n  a\n}\n\n                    "
---
----- SOURCE CODE

pub fn go(a) {
  let a = a + 1
  a
}

                    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([go/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec go(integer()) -> integer().
go(A) ->
    A@1 = A + 1,
    A@1.
